@@ -105,12 +105,10 @@ public class Manifest {
                         "\nSupported platforms : " + supportedPlatforms());
             }
             // Check if module have platform specific libraries
-            List<Library> deps = platform.libraries.stream().filter(library -> {
-                return library.getModules() == null ||
-                        Arrays.stream(library.getModules()).anyMatch(moduleName::equals);
-            }).collect(Collectors.toList());
+            List<Library> deps = platform.libraries.stream().filter(library -> library.getModules() == null ||
+                Arrays.stream(library.getModules()).anyMatch(moduleName::equals)).toList();
             // If not return any
-            if (deps.size() > 0) {
+            if (!deps.isEmpty()) {
                 return platform.target;
             }
         }
