@@ -24,7 +24,6 @@ import java.nio.file.Paths;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 /**
  * Test the formatting of parser test cases.
@@ -209,7 +208,7 @@ public class ParserTestFormatter extends FormatterTest {
         try {
             return Optional.ofNullable(Files.walk(Paths.get(directoryPath))
                     .filter(f -> f.getFileName().toString().equals(fileName))
-                    .collect(Collectors.toList()).get(0).toString());
+                    .toList().get(0).toString());
         } catch (IOException e) {
             return Optional.empty();
         }
